--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,7 +82,7 @@ flutter:
     - images/Tag 5.png
     - images/Tag 6.png
     - images/Novo_Post.png
-    - images/Vector.png
+    - images/vector.png
     - images/Em_alta.png
     - images/zeroTwo.jpg
     - images/settings.png
