--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,6 @@ environment:
 dependencies:
   gradient_app_bar: ^0.1.3
   gradient_text: ^1.0.2
-  figma_theme:
   flutter:
     sdk: flutter
 
@@ -44,10 +43,15 @@ dependencies:
 
 dev_dependencies:
   build_runner:
-  figma_theme_generator:
   flutter_test:
     sdk: flutter
+  flutter_native_splash: ^1.1.8+4
 
+flutter_native_splash:
+  background_image: "images/background.png"
+  image: images/logobigg.png
+  android: true
+  ios: true
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -91,8 +95,9 @@ flutter:
     - images/question-octagon.png
     - images/shield-lock.png
     - images/Key.png
+    - images/logobigg.png
+    - images/background.png
     - images/blanchlogo.png
-
 
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
