--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,10 +89,8 @@ flutter:
     - images/chat.png
     - images/info-circle.png
     - images/question-octagon.png
-    - images/shield-lock.png
-    - images/Key.png
     - images/blanchlogo.png
-
+    - images/conta.png
 
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
