--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -98,6 +98,7 @@ flutter:
     - images/background.png
     - images/blanchlogo.png
     - images/conta.png
+    - images/edit 1.png
 
 
   # For details regarding adding assets from package dependencies, see
