--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -99,6 +99,7 @@ flutter:
     - images/blanchlogo.png
     - images/conta.png
     - images/edit 1.png
+    - images/Rectangle 42.png
 
 
   # For details regarding adding assets from package dependencies, see
