Pag de itens salvos centralizada, correção de falha na pag de config e popup

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -100,6 +100,7 @@ flutter:
     - images/conta.png
     - images/edit 1.png
     - images/Rectangle 42.png
+    - images/accounthd.png
 
 
   # For details regarding adding assets from package dependencies, see
