Modificação ( Juan ) { ItensSalvos_Page }

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -100,6 +100,9 @@ flutter:
     - images/conta.png
     - images/edit 1.png
     - images/Rectangle 42.png
+    - images/pastel.png
+    - images/Peixe.png
+    - images/Rosquinha.png
 
 
   # For details regarding adding assets from package dependencies, see
