--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   firebase_core: ^0.7.0
   firebase_auth: ^0.20.0
   cloud_firestore: ^0.16.0+1
-  provider: ^5.0.0
+  auto_size_text: ^2.1.0
 
 
 dev_dependencies:
