--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,9 +37,9 @@ dependencies:
   transparent_image: ^2.0.0
   scoped_model: ^1.0.1
   url_launcher: ^6.0.4
-  firebase_core: ^0.7.0
-  firebase_auth: ^0.20.0
-  cloud_firestore: ^0.16.0+1
+  firebase_core: ^1.0.4
+  firebase_auth: ^1.1.1
+  cloud_firestore: ^2.2.2
   auto_size_text: ^2.1.0
 
 
