--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,6 @@ dependencies:
   flutter_staggered_grid_view: ^0.4.0
   carousel_pro: ^1.0.0
   transparent_image: ^2.0.0
-  scoped_model: ^1.0.1
   url_launcher: ^6.0.4
   firebase_core: ^1.0.4
   firebase_auth: ^1.1.1
@@ -110,7 +109,7 @@ flutter:
     - images/search.png
     - images/relogio.png
     - images/blanchtextlogo.png
-    - images/IconeCamera.png
+    - images/iconeCamera.png
 
 
 
