--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ environment:
 
 dependencies:
   gradient_app_bar: ^0.1.3
+# cloud_firestore: ^2.2.2
   gradient_text: ^1.0.2
   figma_theme:
   flutter:
@@ -40,6 +41,8 @@ dependencies:
   firebase_auth: ^1.1.1
   cloud_firestore: ^2.2.2
   auto_size_text: ^2.1.0
+  image_picker: ^0.6.3+4
+  firebase_storage: ^8.1.3
 
 
 dev_dependencies:
