--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   auto_size_text: ^2.1.0
   image_picker: ^0.6.3+4
   firebase_storage: ^8.1.3
+  shared_preferences: ^2.0.6
 
 
 dev_dependencies:
