tirando o erro do null na tela de itens salvos

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -113,7 +113,8 @@ flutter:
     - images/search.png
     - images/relogio.png
     - images/blanchtextlogo.png
-    - images/iconeCamera.png
+    - images/IconeCamera.png
+    - images/cameraicon.png
 
 
 
