--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,16 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_native_splash: ^1.1.8+4
+  flutter_launcher_icons: ^0.9.0
+
+
+flutter_icons:
+  image_path: "images/logo-app.png"
+  adaptive_icon_background: "images/background-launcher-icon.png"
+  adaptive_icon_foreground: "images/logo-launcher-icon.png"
+  ios: true
+  android: "launcher_icon"
+
 
 flutter_native_splash:
   background_image: "images/background.png"
@@ -115,6 +125,9 @@ flutter:
     - images/blanchtextlogo.png
     - images/IconeCamera.png
     - images/cameraicon.png
+    - images/logo-app.png
+    - images/background-launcher-icon.png
+    - images/logo-launcher-icon.png
 
 
 
