--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -128,6 +128,7 @@ flutter:
     - images/logo-app.png
     - images/background-launcher-icon.png
     - images/logo-launcher-icon.png
+    - images/fotoDePerfil.png
 
 
 
